@@ -1,3 +1,8 @@
+2011-11-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-completion-handle-file-name-all-completions):
+	Fix an error when called from ido.
+
 2011-11-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-completion-make-tramp-file-name)
